--- a/css/style.css
+++ b/css/style.css
@@ -5,30 +5,22 @@ body {
   background: #e2e2e2; }
 
 header {
-  background: url("/../images/submarine.jpg") no-repeat center;
-  background-size: cover; }
+  background: url("/../images/submarine2.jpg") no-repeat center;
+  background-size: cover;
+  height: 130px; }
 
 .app {
   text-align: center; }
 
-.app-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-  padding: 5px; }
-
 .app-header {
   background-color: #222;
   padding: 10px;
-  color: white; }
+  color: white;
+  text-shadow: 2px 2px black; }
 
 .app-title {
-  font-size: 2rem; }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+  font-size: 3.5rem;
+  font-weight: bold; }
 
 table td {
   width: 40px;
