--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 $font-number: Arial;
 $font-text: Tahoma;
 // colors
-$background-color: rgb(226, 226, 226);
+$background-color: lightgrey;
 $text-color: black;
 
 //app styles
