--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,11 @@ table th {
 
 .hit {
   background: url("/../images/hit.png") no-repeat center; }
+
+.ship tr td {
+  width: 20px;
+  height: 20px;
+  border: 1px solid black;
+  background: url("/../images/hit.png") no-repeat center;
+  background-size: contain;
+  cursor: default; }
